--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ requests==2.30.0
 executor==23.2
 fasteners==0.18
 websockets==11.0.3
+validators==0.20.0
+
+args==0.1.0 
+clint==0.5.1
+
+progress2==1.3.0
+
+tqdm==4.65.0
